Criando componentes divider e menuItem

--- a/della-nonna/src/index.scss
+++ b/della-nonna/src/index.scss
@@ -6,6 +6,7 @@
     --secondary-color: #DE7047;
     --secondary-shadow-color: rgba(222, 122, 71, 0.5);
     --grayscale-color: #CCC;
+    --text-color: #443B25;
 }
 
 * {
