--- a/della-nonna/src/pages/Home/Home.module.scss
+++ b/della-nonna/src/pages/Home/Home.module.scss
@@ -5,21 +5,10 @@
     display: flex;
     flex-direction: column;
 
-    .content {
-        width: 100%;
-        height: 530px;
-        border-radius: 15px 0 15px 15px;
-        background: var(--primary-color);
-        box-shadow: 4px 4px 0px var(--secondary-color);
-        display: flex;
-        align-items: center;
-
-        .divider {
-            width: 30px;
-            height: 540px;
-            border-radius: 5px;
-            background-color: var(--secondary-color);
-            box-shadow: 4px 4px 0px var(--secondary-shadow-color);
-        }
+    &__menu{
+        position: absolute;
+        top: 0;
+        right: -55px;
     }
 }
+
