--- a/della-nonna/src/pages/Home/Home.module.scss
+++ b/della-nonna/src/pages/Home/Home.module.scss
@@ -1,5 +1,5 @@
 .container {
-    width: 1000px;
+    width: 70vw;
     margin: 40px auto;
     gap: 15px;
     display: flex;
@@ -8,7 +8,6 @@
     &__menu{
         position: absolute;
         top: 0;
-        right: -55px;
+        right: 0;
     }
 }
-
