Criação de componentes page e footer

--- a/della-nonna/src/components/Divider/Divider.module.scss
+++ b/della-nonna/src/components/Divider/Divider.module.scss
@@ -1,5 +1,5 @@
 .divider {
-    width: 30px;
+    min-width: 30px;
     height: 540px;
     border-radius: 5px;
     background-color: var(--secondary-color);
