--- a/della-nonna/src/components/common/BoxContainer/BoxContainer.module.scss
+++ b/della-nonna/src/components/common/BoxContainer/BoxContainer.module.scss
@@ -2,10 +2,14 @@
     padding: 15px 0;
     width: 100%;
     height: 530px;
-    border-radius: 15px 0 15px 15px;
+    border-radius: 15px;
     background: var(--primary-color);
     box-shadow: 4px 4px 0px var(--secondary-color);
     display: flex;
     align-items: center;
     position: relative;
+}
+
+.hasMenu {
+    border-radius: 15px 0 15px 15px;
 }
