--- a/della-nonna/src/App.css
+++ b/della-nonna/src/App.css
@@ -8,7 +8,7 @@ body {
     height: 100vh;
 
     display: flex;
-    align-items: center;
+    /* align-items: center; */
     justify-content: center;
     
     background: var(--background-color);
