--- a/della-nonna/src/components/common/Footer/Footer.module.scss
+++ b/della-nonna/src/components/common/Footer/Footer.module.scss
@@ -1,5 +1,6 @@
 .footer{
     width: 100%;
+    margin-bottom: 20px;
     display: flex;
     justify-content: space-between;
 
@@ -25,5 +26,17 @@
         #back img{
             transform: rotate(180deg);
         }
+    }
+
+    .fav{
+        width: 30px;
+        height: 30px;
+        padding: 25px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background: var(--primary-color);
+        box-shadow: 4px 4px 0 var(--secondary-color);
+        border-radius: 15px;
     }
 }
