--- a/della-nonna/src/components/common/MenuItem/MenuItem.module.scss
+++ b/della-nonna/src/components/common/MenuItem/MenuItem.module.scss
@@ -8,6 +8,7 @@
     border-radius: 0 15px 15px 0;
     box-shadow: 4px 4px 0 var(--secondary-color);
     position: absolute;
+    cursor: pointer;
 
     &__namepage{
         font-family: 'Caveat', sans-serif;
