--- a/della-nonna/src/pages/Home/Home.module.scss
+++ b/della-nonna/src/pages/Home/Home.module.scss
@@ -5,3 +5,40 @@
         right: 0;
     }
 }
+
+.page_ingredients, .page_prepare {
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+
+    h2 {
+        font-family: 'Caveat', sans-serif;
+        font-size: 2rem;
+        color: var(--secondary-color);
+    }
+
+    .top {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-start;
+        p {
+            font-family: 'Caveat', sans-serif;
+            font-size: 1.5rem;
+        }
+
+        h2 {
+            color: var(--text-color);
+        }
+    }
+
+    ul {
+        width: 100%;
+        padding: 0 30px;
+        li {
+            margin-top: 10px;
+        }
+    }
+}
